mejorando la estetica

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
         </div>
         <div class="contenedorTitulo">
-            <h1>Título de mi Web</h1>
+            <h1>Riveras Store</h1>
         </div>        
     </header>
     <div class="contenedorProductos" id="Productos">
@@ -28,24 +28,31 @@
         <div class="contenedorTarjetas">        
             <div class="tarjeta">        
                 <a href="https://www.apple.com/la/macbook-pro">
-                     <img src="img/laptop.jpg" alt="">  
-                </a>                                
-                <p>MacBook Pro con chip Apple M1: pruebas realizadas por Apple en octubre de 2020 utilizando sistemas MacBook Pro de 13 pulgadas de preproducción con chip Apple M1, 8 GB de RAM y SSD de 512 GB</p>            
+                     <img src="img/Dyson-brand_tile_460x772.avif" alt="">  
+                </a>   
+                <p>Dyson V15 Detect Absolute: Considerada por
+                     MediaMarkt como la aspiradora escoba más potente e inteligente de Dyson. 
+                     Incluye un cepillo con luz láser que detecta
+                      las partículas de polvo microscópicas en suelos duros.
+                    </p>                             
                 <a href="producto1.html" class="btn">Ver más...</a>               
             </div>
             <div class="tarjeta">        
-                <img src="img/tecladoMac.jpg" alt="">                       
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, officia laboriosam enim cupiditate dicta eos nemo doloremque reprehenderit, facere accusamus earum molestiae nobis rem. Cum labore molestiae amet illo ullam?</p>            
+                <img src="img/61Z34yXlSQL._SL1500_.jpg" alt=""> 
+                <p>Brillo labial voluminizador Lip Plumping Gloss
+                   Un brillo labial de alto brillo que hidrata los labios y brinda un efecto de relleno.
+                   Deja los labios con una sensación de relleno, hidratación y un color translúcido con mucho brillo.
+                </p>                      
                 <a href="producto2.html" class="btn">Ver más...</a>               
             </div>
             <div class="tarjeta">        
-                <img src="img/iphone-17pro-digitalmat-gallery-3-202509.jpeg" alt="">                   
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, officia laboriosam enim cupiditate dicta eos nemo doloremque reprehenderit, facere accusamus earum molestiae nobis rem. Cum labore molestiae amet illo ullam?</p>            
-                <a href="#" class="btn">Ver más...</a>               
+                <img src="img/61uM6EQMzML._SL1500_.jpg" alt="">
+                <p>Multiestilizador Dyson Airwrap: Utiliza el efecto Coanda para peinar y secar el cabello sin calor extremo. La versión en color cobre se ha ofrecido en la tienda hondureña Jetstereo.</p>                   
+                <a href="producto3.html" class="btn">Ver más...</a>               
             </div>
             <div class="tarjeta">        
-                <img src="img/mbp14-spaceblack-select-202410_FMT_WHH.jpeg" alt="">                       
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, officia laboriosam enim cupiditate dicta eos nemo doloremque reprehenderit, facere accusamus earum molestiae nobis rem. Cum labore molestiae amet illo ullam?</p>            
+                <img src="img/s-l1200.jpg" alt="">
+                <p>Base de maquillaje Major Skin Hydra-Luxe Luminous Skin Perfecting Foundation de PATRICK TA: Esta base luminosa ha sido mencionada como una novedad interesante.</p>                       
                 <a href="#" class="btn">Ver más...</a>               
             </div>            
         </div>
@@ -54,16 +61,22 @@
         <h2 class="tituloServicios">Servicios</h2>
         <div class="contenedorTarjetasServicios">
             <div class="tarjetaServicio">
-                <h3>Servicio 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore incidunt eius in atque iure eaque, ad doloribus debitis at ab quo facere, ducimus similique itaque non, officia cum laborum odio?</p>
+                <h3>Asesoría de maquillaje personalizada</h3>
+                <p>Un servicio donde una especialista asesora al cliente sobre qué productos y tonos se adaptan mejor a su tipo de piel, estilo y ocasión.
+                    Ayuda al cliente a elegir productos que realcen su belleza natural y evita compras innecesarias.
+                </p>
             </div>
             <div class="tarjetaServicio">
-                <h3>Servicio 2</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore incidunt eius in atque iure eaque, ad doloribus debitis at ab quo facere, ducimus similique itaque non, officia cum laborum odio?</p>
+                <h3>Tratamientos faciales básicos</h3>
+                <p>Servicio de limpieza facial rápida o hidratación usando los productos que la tienda vende (mascarillas, exfoliantes, cremas).
+                    Permite a los clientes probar productos en su piel y mejora su apariencia de inmediato.
+                </p>
             </div>
             <div class="tarjetaServicio">
-                <h3>Servicio 3</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore incidunt eius in atque iure eaque, ad doloribus debitis at ab quo facere, ducimus similique itaque non, officia cum laborum odio?</p>
+                <h3>Demostración y asesoría en el uso de planchas y secadoras</h3>
+                <p>Servicio donde una especialista enseña a los clientes cómo elegir, usar y cuidar correctamente las planchas y secadoras para obtener mejores resultados en su cabello.
+                    El cliente aprende a cuidar su cabello, obtiene confianza en el producto antes de comprarlo y puede probar el funcionamiento de los modelos disponibles en la tienda.
+                </p>
             </div>
         </div>
     </div>
@@ -72,15 +85,20 @@
         <div class="subContendorAcercaDe">
             <div class="mision">
                 <h2>Misión</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, dignissimos! Minima, aliquid aperiam aut beatae esse, eveniet voluptatem quam veniam eligendi, nostrum nisi rem praesentium vero dolore ad quia voluptatibus.</p>
+                <p>Brindar a nuestros clientes productos de belleza y cuidado personal de alta calidad, acompañados de una atención personalizada que resalte su confianza, estilo y bienestar.</p>
             </div>
             <div class="vision">
                 <h2>Visión</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, dignissimos! Minima, aliquid aperiam aut beatae esse, eveniet voluptatem quam veniam eligendi, nostrum nisi rem praesentium vero dolore ad quia voluptatibus.</p>
+                <p>Ser la tienda de cosméticos preferida en la región, reconocida por su variedad, calidad y asesoría profesional, impulsando la belleza y el autocuidado de cada persona.</p>
             </div>
             <div class="valores">
                 <h2>Valores</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, dignissimos! Minima, aliquid aperiam aut beatae esse, eveniet voluptatem quam veniam eligendi, nostrum nisi rem praesentium vero dolore ad quia voluptatibus.</p>
+                <p>
+                    <ul>Calidad: Ofrecemos solo productos confiables y seguros para nuestros clientes.</ul>
+                    <ul>Compromiso: Nos esforzamos por superar las expectativas en cada compra.</ul>
+                    <ul>Innovación: Incorporamos constantemente nuevas tendencias y tecnologías en belleza.</ul>
+                    <ul>Honestidad: Recomendamos solo lo que realmente se adapta a las necesidades de cada cliente.</ul>
+                </p>
             </div>
         </div>
     </div>
